--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/styles.css">
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.0/dist/alpine.min.js" defer></script>
     <title>Portfolio | Neeraj Tangariya</title>
 </head>
 
 <body>
     <div class="absolute w-full min-h-screen">
         <div class="absolute top-0 w-full h-1/2 left-0 right-0 bg-cover bg-bottom"
-            style="background-image: url('public/img/backg.jpg');"    
-        ></div>
+            style="background-image: url('public/img/backg.jpg');"></div>
     </div>
     <section class="flex justify-center items-center min-h-screen">
         <div class="relative">
@@ -28,9 +29,60 @@
                             Neeraj Tangariya
                         </h5>
                     </div>
-                    <p class="text-xl text-gray-500 leading-relaxed">
-                        Full-stack web developer _!
-                    </p>
+                    <div 
+                        x-data="{ 
+                                text: '',
+                                textArray : ['Full-stack Developer', 'TALL-stack Developer!'],
+                                textIndex: 0,
+                                charIndex: 0,
+                                pauseEnd: 1500,
+                                cursorSpeed: 420,
+                                pauseStart: 20,
+                                typeSpeed: 110,
+                                direction: 'forward' 
+                            }" 
+                            x-init="(() => { 
+                            let typingInterval = setInterval(startTyping, $data.typeSpeed);
+                            function startTyping(){
+                                let current = $data.textArray[ $data.textIndex ];
+                                if($data.charIndex > current.length){
+                                        $data.direction = 'backward';
+                                        clearInterval(typingInterval);
+                                        setTimeout(function(){
+                                        typingInterval = setInterval(startTyping, $data.typeSpeed);
+                                        }, $data.pauseEnd);
+                                }   
+                                $data.text = current.substring(0, $data.charIndex);
+                                if($data.direction == 'forward'){
+                                    $data.charIndex += 1;
+                                } else {
+                                    if($data.charIndex == 0){
+                                        $data.direction = 'forward';
+                                        clearInterval(typingInterval);
+                                        setTimeout(function(){
+                                        
+                                            $data.textIndex += 1;
+                                            if($data.textIndex >= $data.textArray.length){
+                                                $data.textIndex = 0;
+                                            }
+                                        
+                                            typingInterval = setInterval(startTyping, $data.typeSpeed);
+                                        }, $data.pauseStart);
+                                    }
+                                    $data.charIndex -= 1;
+                                }
+                            }
+                            setInterval(function(){
+                                if($refs.cursor.classList.contains('hidden')){
+                                    $refs.cursor.classList.remove('hidden');
+                                } else {
+                                    $refs.cursor.classList.add('hidden');
+                                }
+                            }, $data.cursorSpeed);
+                        })()"
+                        >
+                        <p class="text-xl text-gray-500 leading-relaxed" x-text="text"></p>
+                    </div>
                     <div class="inline-flex content-center space-x-4 text-gray-500 text-4xl">
                         <ion-icon name="logo-github"></ion-icon>
                         <ion-icon name="logo-twitter"></ion-icon>
@@ -38,7 +90,8 @@
                         <ion-icon name="logo-facebook"></ion-icon>
                     </div>
                 </div>
-                <img src="public/img/profile.JPG" alt="neeraj_singh" class="w-80 rounded-full border-6 border-white shadow-md flex-shrink-0">
+                <img src="public/img/profile.JPG" alt="neeraj_singh"
+                    class="w-80 rounded-full border-6 border-white shadow-md flex-shrink-0">
             </div>
         </div>
     </section>
