--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Portfolio | Neeraj Tangariya</title>
 </head>
 
-<body>
+<body class="antialiased text-gray-600">
     <div class="absolute w-full min-h-screen">
         <div class="absolute top-0 w-full h-1/2 left-0 right-0 bg-cover bg-bottom"
             style="background-image: url('public/img/backg.jpg');"></div>
@@ -29,8 +29,7 @@
                             Neeraj Tangariya
                         </h5>
                     </div>
-                    <div 
-                        x-data="{ 
+                    <div x-data="{ 
                                 text: '',
                                 textArray : ['Full-stack Developer', 'TALL-stack Developer!'],
                                 textIndex: 0,
@@ -40,8 +39,7 @@
                                 pauseStart: 20,
                                 typeSpeed: 110,
                                 direction: 'forward' 
-                            }" 
-                            x-init="(() => { 
+                            }" x-init="(() => { 
                             let typingInterval = setInterval(startTyping, $data.typeSpeed);
                             function startTyping(){
                                 let current = $data.textArray[ $data.textIndex ];
@@ -79,8 +77,7 @@
                                     $refs.cursor.classList.add('hidden');
                                 }
                             }, $data.cursorSpeed);
-                        })()"
-                        >
+                        })()">
                         <p class="text-xl text-gray-500 leading-relaxed" x-text="text"></p>
                     </div>
                     <div class="inline-flex content-center space-x-4 text-gray-500 text-4xl">
@@ -95,12 +92,161 @@
             </div>
         </div>
     </section>
-    <section class="bg-red-50 py-20 px-6">
-        <div class="max-w-7xl mx-auto">
+    <section class="bg-gray-50 pt-20 pb-28 px-8">
+        <div class="max-w-6xl mx-auto">
+            <div class="text-center">
+                <h2 class="text-5xl text-gray-500 font-bold">
+                    Services
+                </h2>
+                <p class="p-3 font-semibold">What we're provided</p>
+            </div>
+            <div class="mt-16 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-16">
+                <div class="relative">
+                    <div class="bg-card"></div>
+                    <div class="relative z-10 bg-white p-12 rounded-md shadow-md">
+                        <h3 class="mt-3 text-2xl font-bold">Web Development</h3>
+                        <p class="text-justify">
+                            Sed porttitor lectus nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                            Pellentesque in ipsum id orci porta dapibus. Vivamus suscipit tortor eget felis porttitor
+                            volutpat.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="relative">
+                    <div class="bg-card"></div>
+                    <div class="relative z-10 bg-white p-12 rounded-md shadow-md">
+                        <h3 class="mt-3 text-2xl font-bold">Mobile App Development</h3>
+                        <p class="text-justify">
+                            Sed porttitor lectus nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                            Pellentesque in ipsum id orci porta dapibus. Vivamus suscipit tortor eget felis porttitor
+                            volutpat.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="relative">
+                    <div class="bg-card"></div>
+                    <div class="relative z-10 bg-white p-12 rounded-md shadow-md">
+                        <h3 class="mt-3 text-2xl font-bold">Consultant</h3>
+                        <p class="text-justify">
+                            Sed porttitor lectus nibh. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                            Pellentesque in ipsum id orci porta dapibus. Vivamus suscipit tortor eget felis porttitor
+                            volutpat.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class="bg-white-50 pt-20 pb-28 px-8">
+        <div class="max-w-6xl mx-auto">
             <div class="text-center">
                 <h2 class="text-5xl text-gray-500 font-bold">
                     My Projects
                 </h2>
+                <p class="p-3 font-semibold">Here is my working projects list</p>
+            </div>
+            <div class="mt-16 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+                <div class="rounded-md shadow-md lg:col-span-2">
+                    <img src="public/img/company_theme.png" class="h-80 w-full object-cover" alt="">
+                    <div class="p-8">
+                        <h4 class="font-bold text-2xl">
+                            CMS APP
+                        </h4>
+                        <p class="pt-3 sm:text-left md:text-justify lg:text-justify">
+                            Nulla porttitor accumsan tincidunt. Donec sollicitudin molestie malesuada.
+                        </p>
+                        <a href="#" class="btn-primary">
+                            Demo Project
+                        </a>
+                    </div>
+                </div>
+                <div class="rounded-md shadow-md">
+                    <img src="public/img/blog_theme.png" class="h-80 w-full object-cover" alt="">
+                    <div class="p-8">
+                        <h4 class="font-bold text-2xl">
+                            TODO APP
+                        </h4>
+                        <p class="pt-3 sm:text-left md:text-justify lg:text-justify">
+                            Nulla porttitor accumsan tincidunt. Donec sollicitudin molestie malesuada.
+                        </p>
+                        <a href="#" class="btn-primary">
+                            Demo Project
+                        </a>
+                    </div>
+                </div>
+                <div class="rounded-md shadow-md md:col-span-3 lg:col-span-3">
+                    <img src="public/img/backg.jpg" class="h-80 w-full object-cover" alt="">
+                    <div class="p-8">
+                        <h4 class="font-bold text-2xl">
+                            CRM APP
+                        </h4>
+                        <p class="pt-3 sm:text-left md:text-justify lg:text-justify">
+                            Nulla porttitor accumsan tincidunt. Donec sollicitudin molestie malesuada.
+                        </p>
+                        <a href="#" class="btn-primary">
+                            Demo Project
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section id="contact" class="bg-white-50">
+        <div class="max-w-6xl mx-auto">
+            <div class="text-center">
+                <h2 class="text-5xl text-gray-500 font-bold">
+                    Get in touch
+                </h2>
+                <p class="p-3 font-semibold">Feel free to contact us! 😊</p>
+            </div>
+            <div class="mt-16 flex flex-col justify-center">
+                <div class="relative">
+                    <div class="bg-card"></div>
+                    <div class="relative z-10 bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
+                        <form action="">
+                            <div class="-mx-3 md:flex mb-6">
+                                <div class="md:w-1/2 px-3 mb-6 md:mb-0">
+                                    <label class="label-custom"
+                                        for="full-name">
+                                        Full Name
+                                    </label>
+                                    <input
+                                        class="input-box"
+                                        id="full-name" type="text" placeholder="John Doe" required>
+                                </div>
+                                <div class="md:w-1/2 px-3">
+                                    <label class="label-custom"
+                                        for="email">
+                                        Email
+                                    </label>
+                                    <input
+                                        class="input-box"
+                                        id="email" type="email" placeholder="john@example.com" required>
+                                </div>
+                            </div>
+                            <div class="-mx-3 md:flex">
+                                <div class="md:w-full px-3">
+                                    <label class="label-custom"
+                                        for="message">
+                                        Message
+                                    </label>
+                                    <textarea
+                                        class="input-box"
+                                        name="message" id="message" cols="5" rows="5"></textarea>
+                                </div>
+                            </div>
+                            <div class="flex justify-end">
+                                <button class="btn-submit" type="submit">
+                                    Submit
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
